--- a/angular-bookstore/src/app/app.component.html
+++ b/angular-bookstore/src/app/app.component.html
@@ -1,5 +1,58 @@
-<div>
-  <h1>Book Store</h1>
-  
-  <app-book-list></app-book-list>
+<div class="wrapper">
+  <!-- Navigation -->
+  <div class="content">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" >Online Bookstore</a>
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-8">
+                  <input type="text" name="" id="" class="form-control" placeholder="Search books">
+              </div>
+              <div class="col-md-2">
+                  <button type="submit" class="btn btn-primary">Search</button>
+              </div>
+            </div>
+          </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">About us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact us</a>
+        </li>
+      </ul>
+
+      <!-- search component -->
+    
+      <!-- cart-status component -->
+      <div class="ml-auto">
+      </div>
+
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Logout </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Login </a>
+        </li>
+      </ul>
+    </nav>
+    <br />
+    <!-- Page Content -->
+     
+  </div>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+  <!-- /.container -->
+
+  <!-- Footer -->
+  <footer class="py-5 footer">
+    <div class="container">
+      <p class="m-0 text-center text-dark">
+        Copyright &copy; Your Website 2019
+      </p>
+    </div>
+    <!-- /.container -->
+  </footer>
 </div>
